# nist-sts

./: LICENSE  Makefile.am  README.md  Statistical Tests Suite.sln  configure.ac  discreteFourierTransform.c  linearComplexity.c  nonOverlappingTemplateMatchings.c  sts.sln
Statistical Tests Suite/: Statistical Tests Suite.vcproj  erf.c  erf.h  frequency.c  overlappingTemplateMatchings.c
include/: cephes.h  config.h
