sts_CFLAGS=-I ./include
sts_LDADD=-lm
bin_PROGRAMS = sts
sts_SOURCES = approximateEntropy.c assess.c blockFrequency.c cephes.c cusum.c dfft.c discreteFourierTransform.c erf.c frequency.c generators.c genutils.c linearComplexity.c longestRunOfOnes.c matrix.c nonOverlappingTemplateMatchings.c overlappingTemplateMatchings.c randomExcursions.c randomExcursionsVariant.c rank.c runs.c serial.c universal.c utilities.c
dist_doc_DATA = README.md
