AC_PREREQ([2.69])
AC_INIT([sts], [1.0], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE([foreign silent-rules dist-xz])
AC_CONFIG_SRCDIR([include/decls.h])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC


AC_CHECK_HEADERS([stdlib.h string.h])


AC_CHECK_FUNCS([floor memset pow sqrt])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
